--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -162,39 +162,41 @@
     margin-bottom: 5vh;
 }
 
-@keyframes decor-rotate {
-    0% {
-        transform: rotate(0);
-    }
-    33% {
-        transform: rotate(3deg);
-    }
-    100% {
-        transform: rotate(0deg);
+.decor {
+    background-image: url('~@/projects/dmfy/decor/decor.jpg');
+    background-size: cover;
+    background-position: 0 0;
+    transition: all 0.4s;
+    overflow: hidden;
+
+    .decor-shine {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-image: linear-gradient(
+            80deg,
+            transparent 0%,
+            transparent 30%,
+            rgba(255, 255, 255, 0.3) 60%,
+            rgba(255, 255, 255, 0.5) 70%,
+            transparent 100%
+        );
+        background-repeat: no-repeat;
+        background-position: -100vw;
+        animation: shine 4s infinite;
     }
 }
 
-@keyframes decor-rotate-re {
-    0% {
-        transform: rotate(0);
+@keyframes shine {
+    0%,
+    20% {
+        background-position: -100vw;
     }
-    33% {
-        transform: rotate(-3deg);
-    }
+    90%,
     100% {
-        transform: rotate(0deg);
-    }
-}
-
-@keyframes decor-rotate-bg {
-    0% {
-        transform: rotate(0);
-    }
-    33% {
-        transform: rotate(1deg);
-    }
-    100% {
-        transform: rotate(0deg);
+        background-position: 100vw;
     }
 }
 
