0126 客戶調整進度

--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -46,8 +46,8 @@ p {
 }
 
 @font-face {
-    font-family: 'TimesNewRomanPSMT';
-    src: url('~@/assets/font/TimesNewRomanPSMT.ttf') format('truetype'), url('~@/assets/font/TimesNewRomanPSMT.ttf');
+    font-family: 'TimesNewRoman';
+    src: url('~@/assets/font/TimesNewRoman.ttf') format('truetype'), url('~@/assets/font/TimesNewRoman.ttf');
     font-weight: normal;
     font-style: normal;
 }
