--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -162,12 +162,15 @@
     margin-bottom: 5vh;
 }
 
+.swipe {
+    border: 2px solid #c18c68;
+    box-shadow: 0 0 24px rgb(0 0 0 / 20%);
+}
+
 .decor {
-    background-image: url('~@/projects/dmfy/decor/decor.jpg');
-    background-size: cover;
-    background-position: 0 0;
-    transition: all 0.4s;
     overflow: hidden;
+    animation: rotate1 4s ease-in-out infinite;
+    transition: all 0.5s;
 
     .decor-shine {
         width: 100%;
@@ -175,28 +178,60 @@
         position: absolute;
         top: 0;
         left: 0;
-        background-image: linear-gradient(
-            80deg,
-            transparent 0%,
-            transparent 30%,
-            rgba(255, 255, 255, 0.3) 60%,
-            rgba(255, 255, 255, 0.5) 70%,
-            transparent 100%
-        );
+        background-image: url('~@/projects/dmfy/decor/decor-shine.png');
         background-repeat: no-repeat;
-        background-position: -100vw;
+        background-position: top -50vw right -50vw;
         animation: shine 4s infinite;
+    }
+
+    .decor-mask {
+        background-image: url('~@/projects/dmfy/decor/decor.jpg');
+        background-size: cover;
+        background-position: 0 0;
+        transition: all 0.4s;
+        position: absolute;
+
+        img {
+            visibility: hidden;
+        }
+    }
+
+    .decor-bg {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+}
+
+.en {
+    font-family: 'TimesNewRoman';
+}
+
+.dash {
+    color: #b58463;
+    margin-right: 0.5rem;
+}
+
+@keyframes rotate1 {
+    0% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(2deg);
+    }
+    100% {
+        transform: rotate(0deg);
     }
 }
 
 @keyframes shine {
-    0%,
-    20% {
-        background-position: -100vw;
+    0% {
+        background-position: top -50vw right -50vw;
     }
-    90%,
     100% {
-        background-position: 100vw;
+        background-position: top 50vw right 50vw;
     }
 }
 
