--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -1,5 +1,6 @@
 /* html, body */
-$bg: url('~@/projects/dmfy/all/bg.png');
+$bg: url('~@/projects/dmfy/all/bg.jpg');
+$bg_m: url('~@/projects/dmfy/all/bgm.jpg');
 
 /* font-family */
 /* 1主要字體  2次要字體  3表單字體  4黑體 */
