fix: 表單字體修正

--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -18,7 +18,7 @@ h2 {
 }
 h3,
 label {
-    font-family: Arial, 'Noto Serif TC', 'Noto Sans TC', sans-serif;
+    font-family: Arial, 'Noto Sans TC', sans-serif;
     margin: 0;
     //font-weight: bold;
 }
