--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -3,12 +3,12 @@ $bg: url('');
 
 /* font-family */
 /* 1主要字體  2次要字體  3表單字體 */
-$family1: Arial, 'youmin', 'Noto Serif TC', 'Noto Sans TC', sans-serif;
-$family2: Arial, 'Noto Serif TC', 'Noto Sans TC', sans-serif;
-$family3: Arial, 'Noto Serif TC', 'Noto Sans TC', sans-serif;
+$family1: Arial, 'youmin', 'Noto Sans TC', sans-serif;
+$family2: Arial, 'Noto Sans TC', sans-serif;
+$family3: Arial, 'Noto Sans TC', sans-serif;
 
 /* navigation */
-$nav_bg: #c18c68;
+$nav_bg: #f0d1bf;
 $nav_btn_color: #595757;
 $nav_link_color: #fff;
 $nav_link_subtitle_color: #fff;
@@ -28,61 +28,61 @@ $mask_icon_color: #c82514;
 
 /* contactSection */
 // order
-$order_bg_color: transparent;
+$order_bg_color: #004881;
 $order_bg_image: transparent;
 $order_bg_image_m: transparent;
-$order_title_color: #ce9a78;
+$order_title_color: #fff;
 $order_subtitle_color: #cc2617;
-$order_input_label_color: #c18c68;
+$order_input_label_color: #fff;
 $order_input_color: #000 !important;
 $order_input_placeholder: #999 !important;
 $order_input_bg: #fff !important;
-$order_input_border: solid 1px #c18c68;
+$order_input_border: solid 1px #f0d1bf;
 $order_input_focus_border: solid 1px rgba(0, 0, 0, 1) !important;
 $order_input_selected_color: solid 1px rgba(0, 0, 0, 1) !important;
 $order_check_desc_color: #000 !important;
 $order_check_span_color: #000 !important;
-$order_submit_bg: #c18c68 !important;
-$order_submit_color: #fff !important;
-$order_sumbit_disable_bg: #c18c68 !important;
+$order_submit_bg: #f0d1bf !important;
+$order_submit_color: #806142 !important;
+$order_sumbit_disable_bg: #f0d1bf !important;
 
 // contactInfo
-$contact_bg: transparent;
+$contact_bg: #f0d1bf;
 $contact_bg_m: transparent;
 $contact_shadow: 0 0 80px 0 rgba(0, 0, 0, 0.2);
 
-$contact_btn_border: inset 0 0 0px 0.7px #c18c68;
-$contact_btn_color: #c18c68;
-$contact_btn_icon: #c18c68;
-$contact_btn_bg: #fff;
+$contact_btn_border: inset 0 0 0px 0.7px #f0d1bf;
+$contact_btn_color: #f0d1bf;
+$contact_btn_icon: #f0d1bf;
+$contact_btn_bg: #806142;
 $contact_btn_hover_color: #fff;
 $contact_btn_hover_icon: #fff;
-$contact_btn_hover_bg: #c18c68;
+$contact_btn_hover_bg: #f0d1bf;
 
 $contact_google_btn_color: #fff;
 $contact_google_btn_icon: #fff;
-$contact_google_btn_bg: #c18c68;
-$contact_google_hover_btn_color: #c18c68;
-$contact_google_hover_btn_icon: #c18c68;
+$contact_google_btn_bg: #806142;
+$contact_google_hover_btn_color: #f0d1bf;
+$contact_google_hover_btn_icon: #f0d1bf;
 $contact_google_hover_btn_bg: #fff;
 
 // houseInfo
 $house_bg: #fff;
-$house_title_color: #c1724b;
-$house_border_color: #c18c68;
-$house_label_color: #c18c68;
+$house_title_color: #806142;
+$house_border_color: #f0d1bf;
+$house_label_color: #806142;
 $house_desc_color: #000;
 
 // mobileNav
-$mobile_nav_background: #c18c68;
-$mobile_nav_color: #fff;
+$mobile_nav_background: #806142;
+$mobile_nav_color: #f0d1bf;
 $mobile_nav_border: #5d4400;
 $mobile_nav_icon: #fff;
 
 $mobile_dialog_bg: #fff;
-$mobile_dialog_icon: #c18c68;
+$mobile_dialog_icon: #f0d1bf;
 $mobile_dialog_desc: #000;
-$mobile_dialog_submit_bg: #c18c68;
+$mobile_dialog_submit_bg: #f0d1bf;
 $mobile_dialog_submit_color: #fff;
 
 /* dialog */
