--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -40,8 +40,8 @@ $order_input_bg: #fff !important;
 $order_input_border: solid 1px #f0d1bf;
 $order_input_focus_border: solid 1px rgba(0, 0, 0, 1) !important;
 $order_input_selected_color: solid 1px rgba(0, 0, 0, 1) !important;
-$order_check_desc_color: #000 !important;
-$order_check_span_color: #000 !important;
+$order_check_desc_color: #f0d1bf !important;
+$order_check_span_color: #fff !important;
 $order_submit_bg: #f0d1bf !important;
 $order_submit_color: #806142 !important;
 $order_sumbit_disable_bg: #f0d1bf !important;
