--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -152,6 +152,103 @@
     }
 }
 
+img,
+svg {
+    image-rendering: crisp-edges;
+}
+
+.text-align-center {
+    text-align: center;
+}
+
+.text-align-left {
+    text-align: left;
+}
+
+.text-align-right {
+    text-align: right;
+}
+
+.item-cal {
+    display: none;
+    transition: all 0.5s;
+    background-position: 10vw 0;
+    animation: OutCal 0.5s;
+
+    &.active {
+        display: block;
+        background-position: 0vw 0;
+        animation: InCal 0.5s;
+    }
+
+    @keyframes InCal {
+        from {
+            background-position: 10vw 0;
+        }
+        to {
+            background-position: 0vw 0;
+        }
+    }
+
+    @keyframes OutCal {
+        from {
+            background-position: 0vw 0;
+        }
+        to {
+            background-position: -10vw 0;
+        }
+    }
+}
+.item {
+    &.item5 {
+        .item-cal-pagination {
+            bottom: 15vw;
+        }
+    }
+    &.item4 {
+        .item-cal-pagination {
+            bottom: 5vw;
+        }
+    }
+    &.item3 {
+        .item-cal-pagination {
+            bottom: 10vw;
+        }
+    }
+    &.item2 {
+        .item-cal-pagination {
+            bottom: 12vw;
+        }
+    }
+    &.item1 {
+        .item-cal-pagination {
+            bottom: 15vw;
+        }
+    }
+
+    .item-cal-pagination {
+        position: absolute;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .item-cal-pagination-dot {
+            width: 12px;
+            height: 12px;
+            border: 1px solid #fff;
+            border-radius: 100%;
+            background-color: rgba(255, 255, 255, 0.3);
+            margin: 6px;
+            cursor: pointer;
+
+            &.active {
+                background-color: #fff;
+            }
+        }
+    }
+}
+
 /* 螢幕尺寸標準 */
 /* 平板尺寸 */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
