--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -29,8 +29,8 @@ $mask_icon_color: #c82514;
 /* contactSection */
 // order
 $order_bg_color: #004881;
-$order_bg_image: transparent;
-$order_bg_image_m: transparent;
+$order_bg_image: url(~@/projects/lyj/s1/bg.png);
+$order_bg_image_m: url(~@/projects/lyj/mo/s1/bg.png);
 $order_title_color: #fff;
 $order_subtitle_color: #cc2617;
 $order_input_label_color: #fff;
