--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -37,52 +37,52 @@ $order_input_label_color: #fff;
 $order_input_color: #000 !important;
 $order_input_placeholder: #999 !important;
 $order_input_bg: #fff !important;
-$order_input_border: solid 1px #f0d1bf;
+$order_input_border: solid 1px #EBE3D4;
 $order_input_focus_border: solid 1px rgba(0, 0, 0, 1) !important;
 $order_input_selected_color: solid 1px rgba(0, 0, 0, 1) !important;
-$order_check_desc_color: #f0d1bf !important;
+$order_check_desc_color: #EBE3D4 !important;
 $order_check_span_color: #fff !important;
-$order_submit_bg: #f0d1bf !important;
+$order_submit_bg: #EBE3D4 !important;
 $order_submit_color: #806142 !important;
-$order_sumbit_disable_bg: #f0d1bf !important;
+$order_sumbit_disable_bg: #EBE3D4 !important;
 
 // contactInfo
-$contact_bg: #f0d1bf;
+$contact_bg: #EBE3D4;
 $contact_bg_m: transparent;
 $contact_shadow: 0 0 80px 0 rgba(0, 0, 0, 0.2);
 
-$contact_btn_border: inset 0 0 0px 0.7px #f0d1bf;
-$contact_btn_color: #f0d1bf;
-$contact_btn_icon: #f0d1bf;
-$contact_btn_bg: #806142;
+$contact_btn_border: inset 0 0 0px 0.7px #EBE3D4;
+$contact_btn_color: #806142;
+$contact_btn_icon: #806142;
+$contact_btn_bg: #EBE3D4;
 $contact_btn_hover_color: #fff;
 $contact_btn_hover_icon: #fff;
-$contact_btn_hover_bg: #f0d1bf;
+$contact_btn_hover_bg: #806142;
 
-$contact_google_btn_color: #fff;
-$contact_google_btn_icon: #fff;
-$contact_google_btn_bg: #806142;
-$contact_google_hover_btn_color: #f0d1bf;
-$contact_google_hover_btn_icon: #f0d1bf;
-$contact_google_hover_btn_bg: #fff;
+$contact_google_btn_color: #806142;
+$contact_google_btn_icon: #806142;
+$contact_google_btn_bg: #EBE3D4;
+$contact_google_hover_btn_color: #EBE3D4;
+$contact_google_hover_btn_icon: #EBE3D4;
+$contact_google_hover_btn_bg: #806142;
 
 // houseInfo
 $house_bg: #fff;
 $house_title_color: #806142;
-$house_border_color: #f0d1bf;
+$house_border_color: #EBE3D4;
 $house_label_color: #806142;
 $house_desc_color: #000;
 
 // mobileNav
 $mobile_nav_background: #806142;
-$mobile_nav_color: #f0d1bf;
+$mobile_nav_color: #EBE3D4;
 $mobile_nav_border: #5d4400;
 $mobile_nav_icon: #fff;
 
 $mobile_dialog_bg: #fff;
-$mobile_dialog_icon: #f0d1bf;
+$mobile_dialog_icon: #806142;
 $mobile_dialog_desc: #000;
-$mobile_dialog_submit_bg: #f0d1bf;
+$mobile_dialog_submit_bg: #806142;
 $mobile_dialog_submit_color: #fff;
 
 /* dialog */
