--- a/src/assets/style/form.scss
+++ b/src/assets/style/form.scss
@@ -46,7 +46,7 @@
         font-size: 16px !important;
         border: $order_input_border !important;
         border-radius: 0px !important;
-        background: #fff;
+        background: #f7f4f2;
         font-family: $family3;
 
         &::placeholder {
