--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -348,8 +348,8 @@ img[lazy='loaded'] {
 
     .home {
         padding-top: $nav_phone_height;
-        background-color: $order_bg_color;
-        background-image: $order_bg_image_m;
+        /*background-color: $order_bg_color;*/
+        /*background-image: $order_bg_image_m;*/
         // background-repeat: no-repeat;
         // background-size: cover;
         background-attachment: fixed;
