--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -3,9 +3,9 @@ $bg: url('');
 
 /* font-family */
 /* 1主要字體  2次要字體  3表單字體  4黑體 */
-$family1: Arial, 'youmin', 'Noto Serif TC', 'Noto Sans TC', sans-serif;
-$family2: Arial, 'Noto Serif TC', 'Noto Sans TC', sans-serif;
-$family3: Arial, 'Noto Serif TC', 'Noto Sans TC', sans-serif;
+$family1: Arial, 'youmin', 'Noto Sans TC', sans-serif;
+$family2: Arial, 'Noto Sans TC', sans-serif;
+$family3: Arial, 'Noto Sans TC', sans-serif;
 $family4: Arial, 'Noto Sans TC', sans-serif;
 
 /* navigation */
@@ -30,54 +30,54 @@ $mask_icon_color: #c82514;
 /* contactSection */
 // order
 $order_bg_color: transparent;
-$order_bg_image: transparent;
-$order_bg_image_m: transparent;
+$order_bg_image: url('~@/assets/img/order-bg.png');
+$order_bg_image_m: url('~@/assets/img/order-bg-m.png');
 $order_title_color: #ce9a78;
 $order_subtitle_color: #cc2617;
 $order_input_label_color: #9b6a49;
 $order_input_color: #000 !important;
 $order_input_placeholder: #999 !important;
-$order_input_bg: #fff !important;
-$order_input_border: solid 1px #c18c68;
-$order_input_focus_border: solid 1px rgba(0, 0, 0, 1) !important;
-$order_input_selected_color: solid 1px rgba(0, 0, 0, 1) !important;
+$order_input_bg: #f7f4f2 !important;
+$order_input_border: solid 0 #c79f62;
+$order_input_focus_border: solid 1px #c79f62 !important;
+$order_input_selected_color: solid 1px #c79f62 !important;
 $order_check_desc_color: #000 !important;
 $order_check_span_color: #000 !important;
-$order_submit_bg: #c18c68 !important;
+$order_submit_bg: #c79f62 !important;
 $order_submit_color: #fff !important;
-$order_sumbit_disable_bg: #c18c68 !important;
+$order_sumbit_disable_bg: #c79f62 !important;
 
 // contactInfo
-$contact_bg: transparent;
-$contact_bg_m: transparent;
+$contact_bg: #3b4083;
+$contact_bg_m: #3b4083;
 $contact_shadow: 0 0 80px 0 rgba(0, 0, 0, 0.2);
 
-$contact_btn_border: inset 0 0 0px 0.7px #c18c68;
-$contact_btn_color: #c18c68;
-$contact_btn_icon: #c18c68;
-$contact_btn_bg: #fff;
+$contact_btn_border: inset 0 0 0px 1.2px #c79f62;
+$contact_btn_color: #fff;
+$contact_btn_icon: #fff;
+$contact_btn_bg: transparent;
 $contact_btn_hover_color: #fff;
 $contact_btn_hover_icon: #fff;
-$contact_btn_hover_bg: #c18c68;
+$contact_btn_hover_bg: #c79f62;
 
 $contact_google_btn_color: #fff;
 $contact_google_btn_icon: #fff;
-$contact_google_btn_bg: #c18c68;
-$contact_google_hover_btn_color: #c18c68;
-$contact_google_hover_btn_icon: #c18c68;
+$contact_google_btn_bg: transparent;
+$contact_google_hover_btn_color: #c79f62;
+$contact_google_hover_btn_icon: #c79f62;
 $contact_google_hover_btn_bg: #fff;
 
 // houseInfo
-$house_bg: #fff;
-$house_title_color: #c1724b;
-$house_border_color: #c18c68;
-$house_label_color: #c18c68;
+$house_bg: #f0f0f0;
+$house_title_color: #000000;
+$house_border_color: #c79f62;
+$house_label_color: #c79f62;
 $house_desc_color: #000;
 
 // mobileNav
-$mobile_nav_background: #c18c68;
+$mobile_nav_background: #3b4083;
 $mobile_nav_color: #fff;
-$mobile_nav_border: #5d4400;
+$mobile_nav_border: #c79f62;
 $mobile_nav_icon: #fff;
 
 $mobile_dialog_bg: #fff;
