--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -67,7 +67,7 @@ $contact_google_hover_btn_icon: #0042ad;
 $contact_google_hover_btn_bg: #ffff00;
 
 // houseInfo
-$house_bg: #1d2083;
+$house_bg: #0042ad;
 $house_bg2: #0042ad;
 $house_title_color: #ffff00;
 $house_border_color: #ffff00;
