--- a/src/assets/style/variableDefault.scss
+++ b/src/assets/style/variableDefault.scss
@@ -7,7 +7,7 @@ $logo_tablet_width: calc(100vw * 110 / 1920);
 $logo_phone_width: 90px;
 
 /* contactInfo */
-$contact_logo_pc_width: 338px;
+$contact_logo_pc_width:calc(100vw * 338 / 1920);
 $contact_logo_tablet_width: 280px;
 $contact_logo_mobile_width: 240px;
 
