--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -170,21 +170,23 @@ svg {
 }
 
 .item-cal {
-    display: none;
+   display: none;
     transition: all 1s;
     background-position: 0 0;
-    opacity: 1;
-    animation: OutCal 2s;
+    animation: OutCal 0.5s;
+    z-index: 1;
 
     &.active {
         display: block;
         /*ackground-position: 0vw 0;*/
-        animation: InCal 2s;
+        animation: InCal 0.5s;
+        opacity: 1;
+        z-index: 2;
     }
 
     @keyframes InCal {
         from {
-            opacity: 0.7;
+            opacity: 0;
             /*background-position: 10vw 0;*/
         }
         to {
@@ -199,7 +201,7 @@ svg {
             /* background-position: 0vw 0;*/
         }
         to {
-            opacity: 0.7;
+         //  opacity: 0;
             /* background-position: -10vw 0;*/
         }
     }
