--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -169,40 +169,45 @@ svg {
     text-align: right;
 }
 
-.item-cal {
-   display: none;
-    transition: all 1s;
-    background-position: 0 0;
-    animation: OutCal 0.5s;
-    z-index: 1;
+.item-cal-box {
+    position: relative;
 
-    &.active {
-        display: block;
-        /*ackground-position: 0vw 0;*/
-        animation: InCal 0.5s;
-        opacity: 1;
-        z-index: 2;
-    }
+    .item-cal {
+        position: absolute;
+        transition: all 1s;
+        background-position: 0 0;
+        animation: OutCal 0.5s;
+        z-index: 1;
+        cursor: pointer;
+        opacity: 0;
 
-    @keyframes InCal {
-        from {
-            opacity: 0;
-            /*background-position: 10vw 0;*/
-        }
-        to {
+        &.active {
+            /*ackground-position: 0vw 0;*/
+            animation: InCal 0.5s;
             opacity: 1;
-            /*background-position: 0vw 0;*/
+            z-index: 2;
         }
-    }
 
-    @keyframes OutCal {
-        from {
-            opacity: 1;
-            /* background-position: 0vw 0;*/
+        @keyframes InCal {
+            from {
+                opacity: 0;
+                /*background-position: 10vw 0;*/
+            }
+            to {
+                opacity: 1;
+                /*background-position: 0vw 0;*/
+            }
         }
-        to {
-         //  opacity: 0;
-            /* background-position: -10vw 0;*/
+
+        @keyframes OutCal {
+            from {
+                opacity: 1;
+                /* background-position: 0vw 0;*/
+            }
+            to {
+                //  opacity: 0;
+                /* background-position: -10vw 0;*/
+            }
         }
     }
 }
@@ -239,6 +244,7 @@ svg {
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 1000;
 
         .item-cal-pagination-dot {
             width: 12px;
