--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -176,14 +176,15 @@ svg {
         position: absolute;
         transition: all 1s;
         background-position: 0 0;
-        animation: OutCal 0.5s;
+        animation: OutCal 1s;
         z-index: 1;
         cursor: pointer;
         opacity: 0;
+        width: 100vw;
 
         &.active {
             /*ackground-position: 0vw 0;*/
-            animation: InCal 0.5s;
+            animation: InCal 1s;
             opacity: 1;
             z-index: 2;
         }
