major: first commit

--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -152,6 +152,24 @@
     }
 }
 
+.swiper-container {
+    .swiper-pagination-bullets {
+        bottom: 1.5vw !important;
+
+        .swiper-pagination-bullet {
+            background: transparent;
+            border: 1px solid #fff;
+            opacity: 0.8;
+            width: 18px;
+            height: 18px;
+            margin: 0 0.5vw !important;
+        }
+        .swiper-pagination-bullet-active {
+            background: #fff;
+        }
+    }
+}
+
 /* 螢幕尺寸標準 */
 /* 平板尺寸 */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
@@ -234,5 +252,23 @@
     .work-c {
         text-align: center !important;
         margin-bottom: 12px;
+    }
+
+    .swiper-container {
+        .swiper-pagination-bullets {
+            bottom: 30px !important;
+
+            .swiper-pagination-bullet {
+                background: transparent;
+                border: 1px solid #fff;
+                opacity: 0.8;
+                width: 12px;
+                height: 12px;
+                margin: 0 0.5vw !important;
+            }
+            .swiper-pagination-bullet-active {
+                background: #fff;
+            }
+        }
     }
 }
