--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -3,15 +3,15 @@ $bg: url('');
 
 /* font-family */
 /* 1主要字體  2次要字體  3表單字體  4黑體 */
-$family1: Arial, 'youmin', 'Noto Serif TC', 'Noto Sans TC', sans-serif;
-$family2: Arial, 'Noto Serif TC', 'Noto Sans TC', sans-serif;
-$family3: Arial, 'Noto Serif TC', 'Noto Sans TC', sans-serif;
+$family1: Arial, 'youmin', 'Noto Sans TC', sans-serif;
+$family2: Arial, 'Noto Sans TC', sans-serif;
+$family3: Arial, 'Noto Sans TC', sans-serif;
 $family4: Arial, 'Noto Sans TC', sans-serif;
 
 /* navigation */
-$nav_bg: #c18c68;
-$nav_btn_color: #595757;
-$nav_link_color: #fff;
+$nav_bg: rgba(255, 255, 255, 1);
+$nav_btn_color: #b59668;
+$nav_link_color: #3c3c3c;
 $nav_link_subtitle_color: #fff;
 $nav_link_hover_color: #976a4b;
 $nav_link_hover_bg: #976a4b;
@@ -29,61 +29,61 @@ $mask_icon_color: #c82514;
 
 /* contactSection */
 // order
-$order_bg_color: transparent;
+$order_bg_color: rgba(96, 96, 96, 0.2);
 $order_bg_image: transparent;
 $order_bg_image_m: transparent;
-$order_title_color: #ce9a78;
-$order_subtitle_color: #cc2617;
-$order_input_label_color: #9b6a49;
+$order_title_color: #b59668;
+$order_subtitle_color: #606060;
+$order_input_label_color: #606060;
 $order_input_color: #000 !important;
 $order_input_placeholder: #999 !important;
 $order_input_bg: #fff !important;
-$order_input_border: solid 1px #c18c68;
+$order_input_border: solid 0px #b59668;
 $order_input_focus_border: solid 1px rgba(0, 0, 0, 1) !important;
 $order_input_selected_color: solid 1px rgba(0, 0, 0, 1) !important;
 $order_check_desc_color: #000 !important;
 $order_check_span_color: #000 !important;
-$order_submit_bg: #c18c68 !important;
+$order_submit_bg: #b59668 !important;
 $order_submit_color: #fff !important;
-$order_sumbit_disable_bg: #c18c68 !important;
+$order_sumbit_disable_bg: #b59668 !important;
 
 // contactInfo
-$contact_bg: transparent;
+$contact_bg: rgba(96, 96, 96, 0.2);
 $contact_bg_m: transparent;
 $contact_shadow: 0 0 80px 0 rgba(0, 0, 0, 0.2);
 
-$contact_btn_border: inset 0 0 0px 0.7px #c18c68;
-$contact_btn_color: #c18c68;
-$contact_btn_icon: #c18c68;
-$contact_btn_bg: #fff;
-$contact_btn_hover_color: #fff;
-$contact_btn_hover_icon: #fff;
-$contact_btn_hover_bg: #c18c68;
+$contact_btn_border: inset 0 0 0px 0px #b59668;
+$contact_btn_color: #fff;
+$contact_btn_icon: #fff;
+$contact_btn_bg: #b59668;
+$contact_btn_hover_color: #b59668;
+$contact_btn_hover_icon: #b59668;
+$contact_btn_hover_bg: #fff;
 
 $contact_google_btn_color: #fff;
 $contact_google_btn_icon: #fff;
-$contact_google_btn_bg: #c18c68;
-$contact_google_hover_btn_color: #c18c68;
-$contact_google_hover_btn_icon: #c18c68;
+$contact_google_btn_bg: #b59668;
+$contact_google_hover_btn_color: #b59668;
+$contact_google_hover_btn_icon: #b59668;
 $contact_google_hover_btn_bg: #fff;
 
 // houseInfo
 $house_bg: #fff;
-$house_title_color: #c1724b;
-$house_border_color: #c18c68;
-$house_label_color: #c18c68;
+$house_title_color: #b59668;
+$house_border_color: #b59668;
+$house_label_color: #b59668;
 $house_desc_color: #000;
 
 // mobileNav
-$mobile_nav_background: #c18c68;
+$mobile_nav_background: #b59668;
 $mobile_nav_color: #fff;
 $mobile_nav_border: #5d4400;
 $mobile_nav_icon: #fff;
 
 $mobile_dialog_bg: #fff;
-$mobile_dialog_icon: #c18c68;
+$mobile_dialog_icon: #b59668;
 $mobile_dialog_desc: #000;
-$mobile_dialog_submit_bg: #c18c68;
+$mobile_dialog_submit_bg: #b59668;
 $mobile_dialog_submit_color: #fff;
 
 /* dialog */
