--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -153,6 +153,17 @@
 }
 
 .swiper-container {
+    .mask {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background-image: url('~@/projects/sv2/mask.png');
+        background-size: cover;
+        z-index: 10;
+    }
+
     .swiper-pagination-bullets {
         bottom: 1.5vw !important;
 
@@ -255,6 +266,9 @@
     }
 
     .swiper-container {
+        .mask {
+            display: none;
+        }
         .swiper-pagination-bullets {
             bottom: 30px !important;
 
@@ -264,10 +278,26 @@
                 opacity: 0.8;
                 width: 12px;
                 height: 12px;
-                margin: 0 0.5vw !important;
+                margin: 0 1.2vw !important;
             }
             .swiper-pagination-bullet-active {
                 background: #fff;
+            }
+        }
+
+        .swiper-button-next {
+            width: 30px !important;
+            height: 30px !important;
+            &::after {
+                font-size: 14px !important;
+            }
+        }
+
+        .swiper-button-prev {
+            width: 30px !important;
+            height: 30px !important;
+            &::after {
+                font-size: 14px !important;
             }
         }
     }
