--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -170,7 +170,7 @@
         border: 0;
         border-radius: 100%;
         &:after {
-            font-size: 20px;
+            font-size: 28px;
             font-weight: bolder;
         }
     }
@@ -183,7 +183,7 @@
         border: 0;
         border-radius: 100%;
         &:after {
-            font-size: 20px;
+            font-size: 28px;
             font-weight: bolder;
         }
     }
@@ -202,6 +202,24 @@
             background: #000;
             border-color: #000;
         }
+    }
+}
+
+@keyframes float {
+    0% {
+        transform: translate(0, 0);
+    }
+    20% {
+        transform: translate(3%, 2%);
+    }
+    40% {
+        transform: translate(0%, -1%);
+    }
+    80% {
+        transform: translate(2%, 1%);
+    }
+    100% {
+        transform: translate(4%, 0%);
     }
 }
 
@@ -291,7 +309,7 @@
 
     .swiper-container {
         .swiper-pagination-bullets {
-            bottom: 30px !important;
+            top: 30px !important;
 
             .swiper-pagination-bullet {
                 background: #fff;
