--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -205,6 +205,11 @@
     }
 }
 
+#fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+    background: #fff !important;
+}
+
 @keyframes float {
     0% {
         transform: translate(0, 0);
