--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -28,7 +28,7 @@ $mask_icon_color: #c82514;
 
 /* contactSection */
 // order
-$order_bg_color: #1d208300;
+$order_bg_color: #1d2083;
 $order_bg_image: transparent;
 $order_bg_image_m: transparent;
 $order_title_color: #ffff00;
