--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -370,4 +370,21 @@
             }
         }
     }
+
+    
+    #fp-nav ul li, .fp-slidesNav ul li {
+        width: 14px !important;
+        height: 24px !important;
+    }
+
+    #fp-nav ul li a span, .fp-slidesNav ul li a span {
+        height: 10px !important;
+        width: 10px !important;
+        margin: -2px 0 0 -5px !important;
+    }
+    #fp-nav ul li a.active span {
+        height: 18px!important;
+        width: 18px!important;
+        margin: -8px 0 0 -10px !important;
+    }
 }
