--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -359,7 +359,7 @@ img[lazy='loaded'] {
             padding-top: 0;
         }
 
-        background-color: #fff;
+      //  background-color: #fff;
     }
 
     .full-bg {
