--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -181,6 +181,66 @@
     }
 }
 
+.click-zoom-box {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 50000;
+    background: #eee;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    opacity: 1;
+    animation: slideIn 0.6s;
+    animation-iteration-count: 1;
+
+    img {
+        cursor: move;
+    }
+    .close {
+        position: fixed;
+        right: 3vw;
+        top: 3vw;
+        width: 50px;
+        height: 50px;
+        z-index: 1;
+        cursor: pointer;
+        opacity: 0.5;
+
+        &:hover {
+            opacity: 1;
+        }
+        &:before,
+        &:after {
+            position: absolute;
+            left: 25px;
+            content: ' ';
+            height: 50px;
+            width: 3px;
+            background-color: rgb(0, 0, 0);
+        }
+
+        &:before {
+            transform: rotate(45deg);
+        }
+        &:after {
+            transform: rotate(-45deg);
+        }
+    }
+
+    @keyframes slideIn {
+        from {
+            width: 0;
+            opacity: 0;
+        }
+        to {
+            width: 100%;
+            opacity: 1;
+        }
+    }
+}
+
 /* 螢幕尺寸標準 */
 /* 平板尺寸 */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
