--- a/src/pages/css/style.css
+++ b/src/pages/css/style.css
@@ -93,23 +93,13 @@ p {
     transform: translateZ(80px); /*透視深度*/
 }
 
-.title1 {
-    width: calc(100% * 837 / 1920);
-}
-.title2 {
-    width: calc(100% * 891 / 1920);
-}
-.title3 {
-    width: calc(100% * 725 / 1920);
-}
-
 .button1 {
     position: fixed;
     top: 20%;
     right: 2%;
     margin: 0 auto;
     transform: translateZ(50px); /*透視深度*/
-    width:calc(50% - 635px);
+    width: calc(50% - 635px);
     min-width: calc(100vw * 100 / 1920);
     text-align: left;
     z-index: 5;
@@ -118,7 +108,7 @@ p {
 .button1 > a {
     transition: opacity 0.3s;
     display: block;
-} 
+}
 
 .button1 > a > img {
     width: calc(100vw * 100 / 1920);
@@ -134,14 +124,14 @@ p {
     top: 22vh;
     text-align: center;
     transition: opacity 0.3s;
-    transform: translateZ(50px); 
+    transform: translateZ(50px);
 }
 .button2 > a {
     font-size: calc(100vw * 23 / 1920);
     font-weight: 800;
     letter-spacing: 0.5em;
     width: 11.1em;
-    height:3.77em;
+    height: 3.77em;
     padding: 0 0 0 0.25em;
     border: 1px solid currentColor;
     border-radius: 1em;
@@ -165,7 +155,7 @@ p {
     margin: 0 auto;
     top: 30vh;
     text-align: center;
-    transform: translateZ(100px); 
+    transform: translateZ(100px);
 }
 
 .section.section-1 .bg {
@@ -179,7 +169,7 @@ p {
 
 .section.section-1 .bg img {
     position: absolute;
-    top:20vh;
+    top: 20vh;
     transform: translateY(-30.2%);
     left: 25px;
 }
@@ -271,6 +261,10 @@ p {
     top: 15vh;
     text-align: center;
     transform: translateZ(70px); /*透視深度*/
+}
+
+.section.section-form .title img {
+    width: 50%;
 }
 
 .section.section-form .subtitle {
@@ -434,6 +428,7 @@ p {
 
 /* section-bottom */
 .section.section-bottom {
+    margin-top: 100px;
     margin-bottom: -300px;
 }
 .section.section-bottom .buttons {
@@ -636,16 +631,7 @@ p {
     .section.section-1 .title img:first-child {
         margin-bottom: 3rem;
     }
-    .title1 {
-        width: calc(100vw * 124 / 375);
-        margin-bottom: calc(100vw * 48 / 375);
-    }
-    .title2 {
-        width: calc(100vw * 263 / 375);
-    }
-    .title3 {
-        width: calc(100vw * 306 / 375);
-    }
+
     .section.section-1 .bg img {
         top: 0;
         left: 0;
@@ -701,7 +687,7 @@ p {
         flex-direction: column-reverse;
     }
     .section-swiper .title p {
-       /* text-align: justify;
+        /* text-align: justify;
         text-align-last: center;
         */
         text-align: center;
@@ -740,7 +726,8 @@ p {
         top: 0;
     }
     .section.section-form .title img {
-        width: 100%;
+        width: 80%;
+        margin-bottom: 10vh;
     }
     .section.section-form .form {
         top: 0;
@@ -774,7 +761,7 @@ p {
         margin-top: 3rem;
     }
     .policy-container {
-        font-size:13px;
+        font-size: 13px;
     }
     .section.section-form {
         margin-bottom: 10vh;
@@ -784,8 +771,8 @@ p {
     }
     .section-bottom-mb {
         display: block;
-        margin-bottom:calc(100vw * -100 / 375);
-        width:calc(100vw * 300 / 375);
+        margin-bottom: calc(100vw * -100 / 375);
+        width: calc(100vw * 300 / 375);
     }
     .section-bottom-mb > div {
         margin-bottom: 1rem;
@@ -826,15 +813,25 @@ p {
     .banner {
         width: auto;
     }
-    .mapbutton{
+    .mapbutton {
         border: 2px solid #d0121b;
         color: #000;
-        display: flex;flex-direction:column;
+        display: flex;
+        flex-direction: column;
         line-height: 1.6;
-
     }
-    .mapbutton > a{height: 4em;display: flex;justify-content:center;align-items:center;padding:0 1em;letter-spacing:0.05em;}
-    .mapbutton .hover{background: #d0121b;color: #fff;}
+    .mapbutton > a {
+        height: 4em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 1em;
+        letter-spacing: 0.05em;
+    }
+    .mapbutton .hover {
+        background: #d0121b;
+        color: #fff;
+    }
     .logo {
         display: none;
     }
@@ -858,21 +855,29 @@ p {
     .item .desc {
         font-size: 13px;
     }
-    .stitle{width: calc(100vw * 305 / 375);margin-top:calc(100vw * 30 / 375);}
-.s1-ext.active {
-    opacity: 1;
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    overflow: auto;
-    display: flex !important;
-    align-items: center;
-    justify-content: center;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 100;
-}
-.s1-ext.active img{width: 400%;margin: 0;position: absolute;
-    left: 0;max-width: 400%;}
+    .stitle {
+        width: calc(100vw * 305 / 375);
+        margin-top: calc(100vw * 30 / 375);
+    }
+    .s1-ext.active {
+        opacity: 1;
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        overflow: auto;
+        display: flex !important;
+        align-items: center;
+        justify-content: center;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 100;
+    }
+    .s1-ext.active img {
+        width: 400%;
+        margin: 0;
+        position: absolute;
+        left: 0;
+        max-width: 400%;
+    }
 }
