--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -195,6 +195,32 @@
     animation: slideIn 0.6s;
     animation-iteration-count: 1;
 
+    .swipeHere {
+        width: 80px;
+        position: fixed;
+        z-index: 10;
+        left: 50%;
+        margin-left: -40px;
+        top: 50%;
+        animation: swing 2.5s ease-in-out 0s infinite;
+
+        @keyframes swing {
+            0% {
+                -webkit-transform: translateX(20px);
+                transform: translateX(20px);
+            }
+
+            50% {
+                -webkit-transform: translateX(-20px);
+                transform: translateX(-20px);
+            }
+            100% {
+                -webkit-transform: translateX(20px);
+                transform: translateX(20px);
+            }
+        }
+    }
+
     img {
         cursor: move;
     }
