--- a/src/pages/css/style.css
+++ b/src/pages/css/style.css
@@ -279,7 +279,7 @@ p {
     display: flex;
     width: 50%;
     margin: 0 auto;
-    top: 35vh;
+    top: 11vw;
     flex-wrap: wrap;
 }
 .section.section-form .form > .left,
@@ -727,7 +727,7 @@ p {
     }
     .section.section-form .title img {
         width: 80%;
-        margin-bottom: 10vh;
+        margin-bottom:2em;
     }
     .section.section-form .form {
         top: 0;
