--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -226,25 +226,27 @@
     }
     .close {
         position: fixed;
-        right: 3vw;
+        right: 7vw;
         top: 3vw;
         width: 50px;
         height: 50px;
         z-index: 10000;
         cursor: pointer;
-        opacity: 0.5;
+        opacity: 0.8;
+        background-color: #fff;
 
         &:hover {
             opacity: 1;
+
         }
         &:before,
         &:after {
             position: absolute;
-            left: 25px;
+            left: 23px;
             content: ' ';
             height: 50px;
             width: 3px;
-            background-color: rgb(0, 0, 0);
+            background-color: #b59668;
         }
 
         &:before {
