--- a/src/pages/css/style.css
+++ b/src/pages/css/style.css
@@ -383,7 +383,7 @@ p {
 }
 .policy-container .checkmark {
     position: absolute;
-    top: 4px;
+    top: calc(50% - 10px);
     left: 0;
     height: 20px;
     width: 20px;
