--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -24,7 +24,7 @@ body {
     }
 
     ::selection {
-        background-color: #c18c68;
+        background-color: $selection;
         color: #fff;
     }
 }
