--- a/src/assets/style/fonts.scss
+++ b/src/assets/style/fonts.scss
@@ -8,7 +8,7 @@ h5,
 p {
     font-family: inherit;
     margin: 0;
-    // font-family: 'Noto Sans TC', serif;
+    font-family: 'Noto Serif TC', serif;
 }
 
 h2 {
@@ -24,7 +24,7 @@ label {
 }
 
 p {
-    font-family: 'Noto Sans TC', serif;
+    font-family: 'Noto Serif TC', serif;
     // font-family: '微軟正黑體', 'Microsoft JhengHei', 'Helvetica Neue', Helvetica,
     //   Arial;
     margin: 0;
