春福年年正式

--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -9,9 +9,9 @@ $family3: Arial, 'Noto Sans TC', sans-serif;
 $family4: Arial, 'Noto Sans TC', sans-serif;
 
 /* navigation */
-$nav_bg: #00a199;
+$nav_bg: #fff;
 $nav_btn_color: #595757;
-$nav_link_color: #fff;
+$nav_link_color: #666666;
 $nav_link_subtitle_color: #fff;
 $nav_link_hover_color: #976a4b;
 $nav_link_hover_bg: #976a4b;
