--- a/src/assets/style/form.scss
+++ b/src/assets/style/form.scss
@@ -1,165 +1,173 @@
-@import './variableColor.scss';
+@import "./variableColor.scss";
 
 .el-select {
-    margin-left: 21px;
-    font-family: $family3;
+  margin-left: 21px;
+  font-family: $family3;
 }
 .el-scrollbar {
-    font-family: $family3;
+  font-family: $family3;
 }
 
 .el-date-editor.el-input {
-    position: relative !important;
-    font-size: 14px;
-    display: inline-block !important;
-    width: 100% !important;
-    margin-left: 44px;
+  position: relative !important;
+  font-size: 14px;
+  display: inline-block !important;
+  width: 100% !important;
+  margin-left: 44px;
 }
 
 .el-input__inner {
-    width: 310px !important;
-    height: 48px !important;
-    line-height: 48px !important;
-    font-size: 16px !important;
-    border-radius: 0px !important;
-    border: $order_input_border !important;
-    background: $order_input_bg;
-    color: $order_input_color;
-    font-family: $family3;
+  width: 310px !important;
+  height: 48px !important;
+  line-height: 48px !important;
+  font-size: 16px !important;
+  border-radius: 0px !important;
+  border: $order_input_border !important;
+  background: $order_input_bg;
+  color: $order_input_color;
+  font-family: $family3;
 
-    &:focus {
-        border: $order_input_focus_border;
-    }
+  &:focus {
+    border: $order_input_focus_border;
+  }
 }
 .el-select-dropdown__item.selected {
-    color: $order_input_selected_color;
+  color: $order_input_selected_color;
 }
 
 .el-textarea {
-    width: 420px !important;
-    height: 95% !important;
-    .el-textarea__inner {
-        height: 100% !important;
-        border-radius: 0 !important;
-        color: #333;
-        padding-top: 10px !important;
-        font-size: 16px !important;
-        border: $order_input_border !important;
-        border-radius: 0px !important;
-        background: #f7f4f2;
-        font-family: $family3;
+  width: 420px !important;
+  height: 95% !important;
+  .el-textarea__inner {
+    height: 100% !important;
+    border-radius: 0 !important;
+    color: #333;
+    padding-top: 10px !important;
+    font-size: 16px !important;
+    border: $order_input_border !important;
+    border-radius: 0px !important;
+    background: #f7f4f2;
+    font-family: $family3;
 
-        &::placeholder {
-            color: $order_input_placeholder;
-        }
-
-        &:focus {
-            border: $order_input_focus_border !important;
-        }
+    &::placeholder {
+      color: $order_input_placeholder;
     }
+
+    &:focus {
+      border: $order_input_focus_border !important;
+    }
+  }
 }
 
 .el-checkbox__label {
-    p,
-    h3 {
-        font-size: 14px;
-        color: $order_check_desc_color;
-        font-weight: normal;
-    }
+  p,
+  h3 {
+    font-size: 14px;
+    color: $order_check_desc_color;
+    font-weight: normal;
+  }
 
-    span {
-        color: $order_check_span_color;
-        text-decoration: underline;
-    }
+  span {
+    color: $order_check_span_color;
+    text-decoration: underline;
+  }
 }
 
 .form-submit {
-    width: 320px !important;
-    height: 72px !important;
-    // opacity: 0 !important;
-    border-radius: 0 !important;
-    font-size: 20px !important;
-    background-position: center !important;
-    background-color: $order_submit_bg;
-    background-image: $order_submit_bg;
-    margin: 0 auto !important;
-    margin-top: 20px !important;
-    transition: all 0.3s !important;
-    color: $order_submit_color;
-    // z-index: 10;
-    border: none !important;
-    font-family: $family3;
+  width: 320px !important;
+  height: 72px !important;
+  // opacity: 0 !important;
+  border-radius: 0 !important;
+  font-size: 20px !important;
 
-    &.is-disabled {
-        background-color: $order_sumbit_disable_bg;
-        opacity: 0.6;
-    }
 
-    svg {
-        margin-right: 15px;
-    }
+  background: rgba(231, 149, 14) !important;
+  background: linear-gradient(
+    90deg,
+    rgba(253, 227, 82, 1) 0%,
+    rgba(231, 149, 14, 0.7) 20%,
+    rgba(195, 13, 35, 0.3) 70%,
+    rgba(195, 13, 35, 0) 100%
+  ) !important;
+  
+  margin: 0 auto !important;
+  margin-top: 20px !important;
+  transition: all 0.3s !important;
+  color: $order_submit_color;
+  // z-index: 10;
+  border: none !important;
+  font-family: $family3;
 
-    position: relative;
-    overflow: hidden;
-    &::before {
-        content: '';
-        width: 40%;
-        height: 100%;
-        display: block;
-        background: #fff;
-        position: absolute;
-        transform: skewX(-20deg);
-        left: -10%;
-        opacity: 0;
-        top: 0;
-        z-index: 5;
-        transition: all 0.4s cubic-bezier(0.2, 0.95, 0.57, 0.99);
-    }
+  &.is-disabled {
+    background-color: $order_sumbit_disable_bg;
+    opacity: 0.6;
+  }
 
-    &:hover::before {
-        opacity: 1;
-        width: 90%;
-        left: 140%;
-    }
-    &.is-disabled:hover::before {
-        opacity: 0;
-    }
+  svg {
+    margin-right: 15px;
+  }
+
+  position: relative;
+  overflow: hidden;
+  &::before {
+    content: "";
+    width: 40%;
+    height: 100%;
+    display: block;
+    background: #fff;
+    position: absolute;
+    transform: skewX(-20deg);
+    left: -10%;
+    opacity: 0;
+    top: 0;
+    z-index: 5;
+    transition: all 0.4s cubic-bezier(0.2, 0.95, 0.57, 0.99);
+  }
+
+  &:hover::before {
+    opacity: 1;
+    width: 90%;
+    left: 140%;
+  }
+  &.is-disabled:hover::before {
+    opacity: 0;
+  }
 }
 
 /* 螢幕尺寸標準 */
 /* 手機尺寸 */
 @media only screen and (max-width: 767px) {
-    .el-input__inner {
-        width: 100% !important;
-    }
+  .el-input__inner {
+    width: 100% !important;
+  }
 
-    .el-textarea .el-textarea__inner {
-        width: 100% !important;
-        height: 120px !important;
-    }
+  .el-textarea .el-textarea__inner {
+    width: 100% !important;
+    height: 120px !important;
+  }
 
-    .el-select {
-        margin-left: 0;
-        width: 100%;
-    }
+  .el-select {
+    margin-left: 0;
+    width: 100%;
+  }
 
-    .checkbox {
-        margin-top: 0;
-        white-space: nowrap;
+  .checkbox {
+    margin-top: 0;
+    white-space: nowrap;
 
-        label {
-            padding-left: 28px !important;
-            line-height: 20px !important;
-        }
+    label {
+      padding-left: 28px !important;
+      line-height: 20px !important;
     }
+  }
 
-    .form-submit {
-        width: 90% !important;
-        font-size: 16px !important;
-        margin: 10px auto !important;
-    }
+  .form-submit {
+    width: 90% !important;
+    font-size: 16px !important;
+    margin: 10px auto !important;
+  }
 
-    .el-date-editor.el-input {
-        margin-left: 0px;
-    }
+  .el-date-editor.el-input {
+    margin-left: 0px;
+  }
 }
