--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -71,8 +71,8 @@ $contact_btn_hover_color: #fff;
 $contact_btn_hover_icon: #fff;
 $contact_btn_hover_bg: #d20028;
 
-$contact_google_btn_color: #000000;
-$contact_google_btn_icon: #000000;
+$contact_google_btn_color: #fff;
+$contact_google_btn_icon: #fff;
 $contact_google_btn_bg: linear-gradient(
   90deg,
   rgba(253, 227, 82, 1) 0%,
@@ -87,14 +87,14 @@ $contact_google_hover_btn_bg: #fff;
 $contact_google_hover_border: inset 0 0 0px 1.2px #fff;
 
 // houseInfo
-$house_bg: #f0f0f0;
-$house_title_color: #000000;
+$house_bg: #fff;
+$house_title_color: #d20028;
 $house_border_color: #d20028;
 $house_label_color: #d20028;
 $house_desc_color: #000;
 
 // mobileNav
-$mobile_nav_background: #d20028;
+$mobile_nav_background: #FF8400;
 $mobile_nav_color: #fff;
 $mobile_nav_border: #fff;
 $mobile_nav_icon: #fff;
