--- a/src/assets/style/variableColor.scss
+++ b/src/assets/style/variableColor.scss
@@ -13,7 +13,7 @@ $nav_bg: #fff;
 $nav_btn_color: #595757;
 $nav_link_color: #d20028;
 $nav_link_subtitle_color: #fff;
-$nav_link_hover_color: #f7aebb;
+$nav_link_hover_color: #ff8400;
 $nav_link_hover_bg: #976a4b;
 $nav_link_border_bg: #d20028;
 
