--- a/src/assets/style/customClass.scss
+++ b/src/assets/style/customClass.scss
@@ -117,14 +117,14 @@
 }
 
 .scale-img-dialog {
-  width: 100vw;
+  width: 100%;
   position: fixed;
   top: 0;
   z-index: 300;
 
   .mask {
     background: rgba(0, 0, 0, 0.6);
-    width: 100vw;
+    width: 100%;
     height: 100vh;
   }
   .content {
