--- a/src/assets/style/mapBg.scss
+++ b/src/assets/style/mapBg.scss
@@ -16,7 +16,7 @@
 .map {
   position: relative;
   z-index: 1;
-  overflow-x: scroll;
+  overflow-x: hidden;
   overflow-y: hidden;
   margin-top: 0;
   .map-bg {
